First compiled version CZ IMG based on CZ LAB resources

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -6,15 +6,15 @@
 id: ncez.fhir.cz.imaging
 canonical: https://www.ncez.cz/standards/fhir/imaging
 name: Imaging
-# title: Example Title
-# description: Example Implementation Guide for getting started with SUSHI
+title: Imaging Implementation Guide
+description: Implementation Guide for Imaging Result Report
 status: draft # draft | active | retired | unknown
 version: 0.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2022+
 releaseLabel: ci-build # ci-build | draft | qa-preview | ballot | trial-use | release | update | normative+trial-use
-# license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
-# jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
+license: CC0-1.0 # https://www.hl7.org/fhir/valueset-spdx-license.html
+jurisdiction: urn:iso:std:iso:3166#CZ "Czech Republic" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
   name: Národní centrum elektronického zdravotnictví
   url: https://ncez.mzcr.cz
@@ -30,7 +30,10 @@ publisher:
 #     id: mcode
 #     uri: http://hl7.org/fhir/us/mcode/ImplementationGuide/hl7.fhir.us.mcode
 #     version: 1.0.0
-#
+dependencies:
+  hl7.fhir.uv.ips: current
+  hl7.fhir.us.mcode: current
+  ncez.fhir.cz.core: current
 #
 # The pages property corresponds to IG.definition.page. SUSHI can
 # auto-generate the page list, but if the author includes pages in
