--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-ncez.fhir.cz.imaging.json
+ig = fsh-generated/resources/ImplementationGuide-ncez.cz.fhir.imaging.json
 template = fhir.base.template#current
